Fix bug with managed user passphrase dialog not showing under windows.
Currently the html default resource for this dialog could not be found when the WebUIDataSource requested it. Moving the html resource from includes to structures should make it work. The added DCHECK makes sure to catch the error in a browser_test.

BUG=171370
TEST=Manual,browser_tests

Review URL: https://chromiumcodereview.appspot.com/12334121

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@185240 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 122c31f02a3fc3536d1e2b02360d6d3b389089c4

--- a/chrome/browser/resources/managed_user_passphrase_dialog.css
+++ b/chrome/browser/resources/managed_user_passphrase_dialog.css
@@ -7,7 +7,7 @@
 }
 
 #managed-user-logo {
-  background-image: url('managed_user.png');
+  background-image: url('options/managed_user.png');
   height: 68px;
   width: 65px;
 }
